input data can be empty

--- a/test2.ipynb
+++ b/test2.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -110,15 +110,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "351/351 [==============================] - 0s 270us/step\n",
-      "350/350 [==============================] - 0s 263us/step\n",
-      "347/347 [==============================] - 0s 268us/step\n",
-      "343/343 [==============================] - 0s 274us/step\n",
-      "346/346 [==============================] - 0s 266us/step\n",
-      "343/343 [==============================] - 0s 269us/step\n",
-      "350/350 [==============================] - 0s 261us/step\n",
-      "347/347 [==============================] - 0s 270us/step\n",
-      "353/353 [==============================] - 0s 264us/step\n",
+      "347/347 [==============================] - 0s 263us/step\n",
+      "348/348 [==============================] - 0s 256us/step\n",
+      "346/346 [==============================] - 0s 261us/step\n",
+      "347/347 [==============================] - 0s 298us/step\n",
+      "350/350 [==============================] - 0s 262us/step\n",
+      "345/345 [==============================] - 0s 273us/step\n",
+      "346/346 [==============================] - 0s 257us/step\n",
+      "345/345 [==============================] - 0s 252us/step\n",
+      "353/353 [==============================] - 0s 252us/step\n",
       "generated_data shape: (100000, 4)\n"
      ]
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,27 +138,28 @@
     "for scen in range(1,10):\n",
     "    # take only the samples with the i-th scenario\n",
     "    gen_data = generated_data[scenario[:, scen-1] == 1]\n",
-    "    swds[scen] = ot.sliced_wasserstein_distance(gen_data, YIELDS[scen].values)"
+    "    if gen_data.shape[0] > 0:\n",
+    "        swds[scen] = ot.sliced_wasserstein_distance(gen_data, YIELDS[scen].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "scenario 1: swd = 0.08489773841940967\n",
-      "scenario 2: swd = 0.07579027116907436\n",
-      "scenario 3: swd = 0.07757591658403837\n",
-      "scenario 4: swd = 0.09776840723784831\n",
-      "scenario 5: swd = 0.06879751656750013\n",
-      "scenario 6: swd = 0.10700259418492375\n",
-      "scenario 7: swd = 0.09976478430463699\n",
-      "scenario 8: swd = 0.07389290846125231\n",
-      "scenario 9: swd = 0.1066778043073461\n"
+      "scenario 1: swd = 0.09241378648782211\n",
+      "scenario 2: swd = 0.06958723735566726\n",
+      "scenario 3: swd = 0.06969870315720766\n",
+      "scenario 4: swd = 0.10628248080325144\n",
+      "scenario 5: swd = 0.07329931335092643\n",
+      "scenario 6: swd = 0.10262239230839387\n",
+      "scenario 7: swd = 0.09325542172245106\n",
+      "scenario 8: swd = 0.0707391028515526\n",
+      "scenario 9: swd = 0.10282487772530385\n"
      ]
     }
    ],
@@ -169,10 +170,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#noise = np.load('data/noise.npy')\n",
+    "output = np.load('output.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 4)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.shape"
+   ]
   }
  ],
  "metadata": {
